// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notices should render multiple notices 1`] = `
<section
  className="notices"
>
  <Heading4>
    noticesHeader
  </Heading4>
  <ForwardRef
    fixed={true}
  >
    <ForwardRef>
      <ForwardRef
        className="notices-row"
        hover={true}
        key="0"
      >
        <EditableCell
          className="notices-editable-cell"
        >
          <ForwardRef
            className="notices-text-area"
            label=""
            onBlur={[Function]}
            onChange={[Function]}
            value="This a notice"
          />
        </EditableCell>
        <ForwardRef
          align="right"
        >
          <Tooltip
            content="deleteNoticeTooltip"
            placement="bottom"
          >
            <ForwardRef
              className="notices-icon-button"
              onClick={[Function]}
            >
              <DeleteIcon />
            </ForwardRef>
          </Tooltip>
        </ForwardRef>
      </ForwardRef>
      <ForwardRef
        className="notices-row"
        hover={true}
        key="1"
      >
        <EditableCell
          className="notices-editable-cell"
        >
          <ForwardRef
            className="notices-text-area"
            label=""
            onBlur={[Function]}
            onChange={[Function]}
            value="This is another notice"
          />
        </EditableCell>
        <ForwardRef
          align="right"
        >
          <Tooltip
            content="deleteNoticeTooltip"
            placement="bottom"
          >
            <ForwardRef
              className="notices-icon-button"
              onClick={[Function]}
            >
              <DeleteIcon />
            </ForwardRef>
          </Tooltip>
        </ForwardRef>
      </ForwardRef>
      <ForwardRef
        hover={true}
        onClick={[Function]}
      >
        <ForwardRef />
        <ForwardRef
          align="right"
        >
          <Tooltip
            content="addNoticeTooltip"
            placement="bottom"
          >
            <ForwardRef
              className="notices-icon-button"
              onClick={[Function]}
            >
              <AddIcon />
            </ForwardRef>
          </Tooltip>
        </ForwardRef>
      </ForwardRef>
    </ForwardRef>
  </ForwardRef>
</section>
`;

exports[`Notices should render no notices 1`] = `
<section
  className="notices"
>
  <Heading4>
    noticesHeader
  </Heading4>
  <ForwardRef
    fixed={true}
  >
    <ForwardRef>
      <ForwardRef
        hover={true}
        onClick={[Function]}
      >
        <ForwardRef />
        <ForwardRef
          align="right"
        >
          <Tooltip
            content="addNoticeTooltip"
            placement="bottom"
          >
            <ForwardRef
              className="notices-icon-button"
              onClick={[Function]}
            >
              <AddIcon />
            </ForwardRef>
          </Tooltip>
        </ForwardRef>
      </ForwardRef>
    </ForwardRef>
  </ForwardRef>
</section>
`;

exports[`Notices should render single notices 1`] = `
<section
  className="notices"
>
  <Heading4>
    noticesHeader
  </Heading4>
  <ForwardRef
    fixed={true}
  >
    <ForwardRef>
      <ForwardRef
        className="notices-row"
        hover={true}
        key="0"
      >
        <EditableCell
          className="notices-editable-cell"
        >
          <ForwardRef
            className="notices-text-area"
            label=""
            onBlur={[Function]}
            onChange={[Function]}
            value="This a notice"
          />
        </EditableCell>
        <ForwardRef
          align="right"
        >
          <Tooltip
            content="deleteNoticeTooltip"
            placement="bottom"
          >
            <ForwardRef
              className="notices-icon-button"
              onClick={[Function]}
            >
              <DeleteIcon />
            </ForwardRef>
          </Tooltip>
        </ForwardRef>
      </ForwardRef>
      <ForwardRef
        hover={true}
        onClick={[Function]}
      >
        <ForwardRef />
        <ForwardRef
          align="right"
        >
          <Tooltip
            content="addNoticeTooltip"
            placement="bottom"
          >
            <ForwardRef
              className="notices-icon-button"
              onClick={[Function]}
            >
              <AddIcon />
            </ForwardRef>
          </Tooltip>
        </ForwardRef>
      </ForwardRef>
    </ForwardRef>
  </ForwardRef>
</section>
`;
